--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,44 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 1000px;
+  height: 600px;
+  border: 2px solid black;
+  margin: auto;
+  overflow: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.slide {
+  min-height: 600px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.hidden-slide {
+  display: none;
 }
 
-.App-link {
-  color: #61dafb;
+.prev-slide {
+  overflow-y: hidden;
+  z-index: 2;
+  transform: translateY(-100%) translateZ(0px);
+  position: absolute;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.next-slide {
+  overflow-y: hidden;
+  z-index: 2;
+  transform: translateY(100%) translateZ(0px);
+  position: absolute;
+}
+
+.cur-slide {
+  overflow-y: auto;
+  z-index: 2;
+  transform: translateY(0%) translateZ(0px);
+}
+
+.wheel-count {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
